--- a/book-agile-web-dev-with-rails/depot/test/fixtures/products.yml
+++ b/book-agile-web-dev-with-rails/depot/test/fixtures/products.yml
@@ -1,13 +1,22 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
+# the one, two, ruby are not inserted into the DB but they allow us to refer to particular fixture rows in our tests
+# each paragraph below is a "fixture" and the first line is it's name
+# DHH recommends picking good, explanatory fixture names
 one:
-  title: MyString
-  description: MyText
-  image_url: MyString
+  title: My Title 1
+  description: MyText goes on and on
+  image_url: blah.jpg
   price: 9.99
 
 two:
-  title: MyString
-  description: MyText
-  image_url: MyString
+  title: My Title 2
+  description: MyText goes on
+  image_url: MyString.gif
   price: 9.99
+
+ruby:
+  title: Programming Ruby 1.9
+  description: Ruby is great
+  price: 49.50
+  image_url: ruby.png
